@@ -39,6 +39,7 @@ Linux NetworX and many other contributors.
 <li>Didier Gazen (Laboratoire d'Aerologie, France)</li>
 <li>Raphael Geissert (Debian)</li>
 <li>Yiannis Georgiou (Bull)</li>
+<li>Andrej N. Gritsenko (Ukraine)</li>
 <li>Mark Grondona (LLNL)</li>
 <li>Takao Hatazaki (HP, Japan)</li>
 <li>Matthieu Hautreux (CEA, France)</li>
